part_1/1.09/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pongapp-service
spec:
  type: ClusterIP
  selector:
    app: pongapp
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
