part_1/1.09/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hashapp-pongapp-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hashapp-service
            port:
              number: 8080
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pongapp-service
            port:
              number: 8080
